test/libhyperion/syntaxTests/inlineAssembly/assembly_dialect_leading_space.hyp
function f() pure {
    assembly " zvmasm" {}
}
// ----
// ParserError 4531: (33-42): Only "zvmasm" supported.
